<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.additem.AddItemActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/price" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/price_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/count" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/count_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/desc_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:width="100dp"
        android:textAllCaps="false"
        android:text="@string/add" />

</LinearLayout>